--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
                             <div>
                                 <h3 class="font-semibold text-xl mb-2 text-gray-700">My role & the Team</h3>
                                 <p class="text-gray-600 mb-4">
-                                    I held the role of an UX Lead on a cross-functional scrum team consisting of a PO, BA, Devs, QA, SM, and a team of scientists, researchers, and lab workers. The project type was a <b>Platform Unification & Workflow Redesign</b> for an <b>Enterprise SaaS product</b> for Internal Pharma R&D.
+                                    I held the role of an UX Lead on a cross-functional scrum team consisting of a PO, BA, Devs, QA, SM, and a team of scientists, researchers, and lab workers. The project type was a <b>Platform Unification & Workflow Redesign</b> for an <b>Enterprise SaaS product</b> for Internal Pharmaceutical R&D.
                                 </p>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-xl mb-2 text-gray-700">The Challenge</h3>
+                                <h3 class="font-semibold text-xl mb-2 text-gray-700">The challenge</h3>
                                 <p class="text-gray-600 mb-4">
-                                    A fragmented, siloed system used by pharma scientists was slowing down research and duplicating effort. One user insight captured the challenge well: <i>"I waste half of my day chasing around tools and rooms."</i><br>This became my core insight and the driver behind a unified, intuitive platform.
+                                    A fragmented, siloed system used by pharmaceutical scientists was slowing down research and duplicating effort. One user insight captured the challenge well: <i>"I waste half of my day chasing around tools and rooms."</i><br>This became my core insight and the driver behind a unified, intuitive platform.
                                 </p>
                             </div>
                         </div>
                         <div class="mt-8">
                             <h3 class="font-semibold text-xl mb-2 text-gray-700">Summary & impact</h3>
                             <p class="text-gray-600 mb-4">
-                                I led the end-to-end UX effort to redesign and unify the platform, resulting in major efficiency gains and high user satisfaction.
+                                I led the end-to-end UX efforts to redesign and unify different platforms under one hood, resulting in major efficiency gains and high user satisfaction.
                             </p>
                             <ul class="list-disc list-inside text-gray-600 space-y-2">
                                 <li>Time/effort reduction for researchers</li>
@@ -117,11 +117,11 @@
                                     I took on an informal leadership role to define workflows, set early rituals, and align the team during a formative phase. My responsibilities included:
                                 </p>
                                 <ul class="list-disc list-inside text-gray-600 space-y-2">
-                                    <li>Leading UX strategy, research, and discovery.</li>
-                                    <li>Translating product, business, and user goals into actionable solutions.</li>
-                                    <li>Designing and documenting ideas to support agile planning.</li>
-                                    <li>Introducing a modular UX system and defining scalable design patterns.</li>
-                                    <li>Advocating for user experience practices across the team.</li>
+                                    <li>Leading UX strategy, research, and discovery</li>
+                                    <li>Translating product, business, and user goals into actionable solutions</li>
+                                    <li>Designing and documenting ideas to support agile planning</li>
+                                    <li>Introducing a modular UX system and defining scalable design patterns</li>
+                                    <li>Advocating for user experience practices across the team</li>
                                 </ul>
                             </div>
                             <div>
@@ -166,7 +166,7 @@
                                 </p>
                             </div>
                             <div class="bg-teal-50 p-6 rounded-xl">
-                                <h4 class="font-semibold text-lg mb-2 text-gray-700">No-Code interaction model</h4>
+                                <h4 class="font-semibold text-lg mb-2 text-gray-700">No-code interaction model</h4>
                                 <p class="text-sm text-gray-600">
                                     Easy to learn and led to high user adoption with minimal onboarding.
                                 </p>
@@ -210,9 +210,9 @@
                             </div>
                             <div class="text-left">
                                 <h3 class="text-xl font-bold text-gray-900 mb-2">Anna Marchwicka</h3>
-                                <p class="text-lg text-gray-600 mb-4">Senior UX/Product Designer | 16+ years experience in SaaS, B2B, and B2B2C environments</p>
+                                <p class="text-lg text-gray-600 mb-4">Senior UX/Product Designer | 16+ years experience in various environments</p>
                                 <p class="text-gray-700 mb-4">
-                                    A senior UX/Product Designer with over 16 years of hands-on experience in user-centered design, research, and product development. Adept at leading end-to-end design efforts, facilitating cross-functional workshops, and aligning UX with strategic business goals. I am skilled in driving research-informed design decisions,  supporting agile teams in high-growth environments, and scaling design systems.
+                                    A senior UX/Product Designer with over 16 years of hands-on experience in user-centered design, research, and product development. Adept at leading end-to-end design efforts, facilitating cross-functional workshops, and aligning UX with strategic business goals. I am skilled in driving research-informed design decisions, supporting agile teams in high-growth environments, and scaling design systems.
                                 </p>
                             </div>
                         </div>
@@ -230,7 +230,7 @@
                                 <ul class="text-gray-600 text-sm space-y-1">
                                     <li>Lead Product and UX Designer: 108 creations (2013-present)</li>
                                     <li>UX | Product | Experience | Research: Hazelcast (2022-2023)</li>
-                                    <li>Senior User Experience Designer: 7N (23-2022)</li>
+                                    <li>Senior User Experience Designer: 7N (2019-2022)</li>
                                     <li>User Experience Designer: GetResponse (2017-2019)</li>
                                     <li>UX Designer Expert: Fagbokforlaget V&B AS (2016-2017)</li>
                                 </ul>
@@ -238,8 +238,8 @@
                             <div>
                                 <h4 class="font-semibold text-xl mb-2 text-gray-800">Education & certification</h4>
                                 <ul class="text-gray-600 text-sm space-y-1">
-                                    <li>Master of Science: Quality Science, Gdynia Maritime University</li>
-                                    <li>Human-Computer Interaction: Stanford University (online)</li>
+                                    <li><b>Master of Science</b>: Quality Science, Gdynia Maritime University</li>
+                                    <li><b>Human-Computer Interaction</b>: Stanford University (online)</li>
                                 </ul>
                             </div>
                         </div>
@@ -254,7 +254,7 @@
                 <div class="max-w-4xl mx-auto">
                     <h2 class="text-2xl sm:text-3xl font-bold text-gray-900 mb-4">Let's connect</h2>
                     <p class="text-lg text-gray-600 mb-8">
-                        My goal is to create great user experiences that drive business results. If you have a challenge that needs a strategic design partner, let's connect. I'm available to discuss mid-to-senior level roles and projects, and I'd love to hear about your team and product's unique opportunities.
+                        My goal is to create great user experiences that drive business results. If you face a challenge that needs a strategic design partner, let's connect. I'm available to discuss mid-to-senior level roles and projects, and I'd love to hear about your team and product's unique opportunities.
                     </p>
                     <div class="flex flex-col sm:flex-row justify-center items-center gap-4 mb-8">
                         <a href="mailto:ania.marchwicka@gmail.com" class="bg-teal-800 text-white font-semibold py-3 px-6 rounded-full hover:bg-teal-700 transition-colors duration-300">
@@ -297,4 +297,5 @@
             });
         </script>
 </body>
+
 </html>
