--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
             </nav>
             <!-- Mobile Menu -->
             <div id="mobile-menu" class="hidden md:hidden bg-teal-800 shadow-md">
-                <a href="#Case-study" class="block py-2 px-4 text-sm text-gray-100 hover:bg-teal-900 transition-colors duration-300">Case Study</a>
-                <a href="#About me" class="block py-2 px-4 text-sm text-gray-100 hover:bg-teal-900 transition-colors duration-300">About me</a>
-                <a href="Assistant.html" class="block py-2 px-4 text-sm text-gray-100 hover:bg-teal-900 transition-colors duration-300">AI Assistant</a>
-                <a href="#Contact" class="block py-2 px-4 text-sm text-gray-100 hover:bg-teal-900 transition-colors duration-300">Contact</a>
+                <a href="#Case-study" class="block py-2 px-4 text-sm text-right text-gray-100 hover:bg-teal-900 transition-colors duration-300">Case Study</a>
+                <a href="#About me" class="block py-2 px-4 text-sm text-right text-gray-100 hover:bg-teal-900 transition-colors duration-300">About me</a>
+                <a href="#Contact" class="block py-2 px-4 text-sm text-right text-gray-100 hover:bg-teal-900 transition-colors duration-300">Contact</a>
             </div>
         </header>
 
@@ -149,25 +148,25 @@
                         <div class="grid md:grid-cols-2 gap-8">
                             <div class="bg-teal-50 p-6 rounded-xl">
                                 <h4 class="font-semibold text-lg mb-2 text-gray-700">Modular UX system</h4>
-                                <p class="text-sm text-gray-600">
+                                <p class="text-gray-600">
                                     A set of reusable components and repeatable patterns that scaled across modules and sped up future feature rollouts.
                                 </p>
                             </div>
                             <div class="bg-teal-50 p-6 rounded-xl">
                                 <h4 class="font-semibold text-lg mb-2 text-gray-700">Streamlined navigation & IA</h4>
-                                <p class="text-sm text-gray-600">
+                                <p class="text-gray-600">
                                     Reduced unnecessary clicks by surfacing relevant tasks and data contextually.
                                 </p>
                             </div>
                             <div class="bg-teal-50 p-6 rounded-xl">
                                 <h4 class="font-semibold text-lg mb-2 text-gray-700">Unified experiment view</h4>
-                                <p class="text-sm text-gray-600">
+                                <p class="text-gray-600">
                                     Seamless tracking of experimental lineage across tools.
                                 </p>
                             </div>
                             <div class="bg-teal-50 p-6 rounded-xl">
                                 <h4 class="font-semibold text-lg mb-2 text-gray-700">No-code interaction model</h4>
-                                <p class="text-sm text-gray-600">
+                                <p class="text-gray-600">
                                     Easy to learn and led to high user adoption with minimal onboarding.
                                 </p>
                             </div>
@@ -219,7 +218,7 @@
                         <div class="mt-8 grid md:grid-cols-2 lg:grid-cols-3 gap-8 text-left">
                             <div>
                                 <h4 class="font-semibold text-xl mb-2 text-gray-800">Skills & tools</h4>
-                                <ul class="text-gray-600 text-sm space-y-1">
+                                <ul class="text-gray-600 space-y-1">
                                     <li><b>Design</b>: Figma, Sketch, Axure, Miro, FigJam, Design Systems</li>
                                     <li><b>UX Research</b>: Usability Testing, Customer Interviews, UserTesting, UserZoom, Google Analytics, Pendo, Hotjar, Dovetail</li>
                                     <li><b>Core Competencies</b>: Problem Definition, UX Research, Information Architecture, Interaction Design</li>
@@ -227,7 +226,7 @@
                             </div>
                             <div>
                                 <h4 class="font-semibold text-xl mb-2 text-gray-800">Experience</h4>
-                                <ul class="text-gray-600 text-sm space-y-1">
+                                <ul class="text-gray-600 space-y-1">
                                     <li>Lead Product and UX Designer: 108 creations (2013-present)</li>
                                     <li>UX | Product | Experience | Research: Hazelcast (2022-2023)</li>
                                     <li>Senior User Experience Designer: 7N (2019-2022)</li>
@@ -237,7 +236,7 @@
                             </div>
                             <div>
                                 <h4 class="font-semibold text-xl mb-2 text-gray-800">Education & certification</h4>
-                                <ul class="text-gray-600 text-sm space-y-1">
+                                <ul class="text-gray-600 space-y-1">
                                     <li><b>Master of Science</b>: Quality Science, Gdynia Maritime University</li>
                                     <li><b>Human-Computer Interaction</b>: Stanford University (online)</li>
                                 </ul>
