--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     <span>Anna Marchwicka</span>
                 </a>
                 <div class="hidden md:flex space-x-8">
-                    <a href="#Case-study" class="text-gray-100 hover:text-white font-medium transition-colors duration-300">Case Study</a>
-                    <a href="#About me" class="text-gray-100 hover:text-white font-medium transition-colors duration-300">About me</a>
-                    <a href="#Contact" class="text-gray-100 hover:text-white font-medium transition-colors duration-300">Contact</a>
+                    <a href="#case-study" class="text-gray-100 hover:text-white font-medium transition-colors duration-300">Case Study</a>
+                    <a href="#about-me" class="text-gray-100 hover:text-white font-medium transition-colors duration-300">About me</a>
+                    <a href="#contact" class="text-gray-100 hover:text-white font-medium transition-colors duration-300">Contact</a>
                 </div>
                 <!-- Mobile Menu Button -->
                 <button id="mobile-menu-button" class="md:hidden text-gray-100 hover:text-white focus:outline-none">
@@ -52,9 +52,9 @@
             </nav>
             <!-- Mobile Menu -->
             <div id="mobile-menu" class="hidden md:hidden bg-teal-800 shadow-md">
-                <a href="#Case-study" class="block py-2 px-4 text-sm text-right text-gray-100 hover:bg-teal-900 transition-colors duration-300">Case Study</a>
-                <a href="#About me" class="block py-2 px-4 text-sm text-right text-gray-100 hover:bg-teal-900 transition-colors duration-300">About me</a>
-                <a href="#Contact" class="block py-2 px-4 text-sm text-right text-gray-100 hover:bg-teal-900 transition-colors duration-300">Contact</a>
+                <a href="#case-study" class="block py-2 px-4 text-sm text-right text-gray-100 hover:bg-teal-900 transition-colors duration-300">Case Study</a>
+                <a href="#about-me" class="block py-2 px-4 text-sm text-right text-gray-100 hover:bg-teal-900 transition-colors duration-300">About me</a>
+                <a href="#contact" class="block py-2 px-4 text-sm text-right text-gray-100 hover:bg-teal-900 transition-colors duration-300">Contact</a>
             </div>
         </header>
 
@@ -198,7 +198,7 @@
 
 
             <!-- About Me Section -->
-            <section id="about" class="bg-teal-50 py-12 px-4 sm:px-6 lg:px-8 text-center">
+            <section id="about-me" class="bg-teal-50 py-12 px-4 sm:px-6 lg:px-8 text-center">
                 <div class="max-w-4xl mx-auto">
                     <h2 class="text-2xl sm:text-3xl font-bold text-gray-900 mb-8">About me</h2>
                     <div>
