Navigation menu cases

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <span>Anna Marchwicka</span>
                 </a>
                 <div class="hidden md:flex space-x-8">
-                    <a href="#case-study" class="text-gray-100 hover:text-white font-medium transition-colors duration-300">Case Study</a>
+                    <a href="#case-study" class="text-gray-100 hover:text-white font-medium transition-colors duration-300">Case study</a>
                     <a href="#about-me" class="text-gray-100 hover:text-white font-medium transition-colors duration-300">About me</a>
                     <a href="#contact" class="text-gray-100 hover:text-white font-medium transition-colors duration-300">Contact</a>
                 </div>
@@ -52,7 +52,7 @@
             </nav>
             <!-- Mobile Menu -->
             <div id="mobile-menu" class="hidden md:hidden bg-teal-800 shadow-md">
-                <a href="#case-study" class="block py-2 px-4 text-sm text-right text-gray-100 hover:bg-teal-900 transition-colors duration-300">Case Study</a>
+                <a href="#case-study" class="block py-2 px-4 text-sm text-right text-gray-100 hover:bg-teal-900 transition-colors duration-300">Case study</a>
                 <a href="#about-me" class="block py-2 px-4 text-sm text-right text-gray-100 hover:bg-teal-900 transition-colors duration-300">About me</a>
                 <a href="#contact" class="block py-2 px-4 text-sm text-right text-gray-100 hover:bg-teal-900 transition-colors duration-300">Contact</a>
             </div>
